aws-eks/k8s-yml-templates/core/ingClass.yml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata: 
  name: traefik-lb
  namespace: sonarqube
spec: 
  controller: traefik.io/ingress-controller
