aws-eks/k8s-yml-templates/core/namespaces.yaml
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: dev
    annotations: 
      linkerd.io/inject: enabled
      #config.linkerd.io/proxy-cpu-request: "0.01" 
      prometheus.io/scrape: "true"
      #10 nodes, so lower this to test more pods -- this may negatively impact linkerd-proxy and metrics performance
      #config.linkerd.io/proxy-cpu-request: "0.5"
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: qa
    annotations: 
      linkerd.io/inject: enabled
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: ingress
    annotations: 
      linkerd.io/inject: disabled
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: devops-addons
    annotations: 
      linkerd.io/inject: disabled
#DefectDojo, sonarqube, kube-bench, kube-hunter, kured      
---
  apiVersion: v1
  kind: Namespace
  metadata:
    name: monitoring #for EFK/Loki-stack/Prometheus/Grafana
    annotations: 
      linkerd.io/inject: disabled
---
