aws-eks/k8s-yml-templates/core/ubuntu-git-runner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-runner
  namespace: devops-addons
  labels:
    app: github-runner
spec:
  replicas: 2
  selector:
    matchLabels:
      app: github-runner
  template:
    metadata:
      labels:
        app: github-runner
    spec:
      containers:
      - name: github-runner
        image: azdevacr01.azurecr.io/git-hosted-runner:11022021-2
        #image: sanderknape/github-runner:latest
        #command: ["/bin/sh"]
        #args: ['-c', "sudo apt update -y" ]   
        resources:
          limits:
            memory: "2Gi"
          requests:
            memory: "250Mi"
            cpu: "500m"
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-sock-volume
        - mountPath: /zap/wrk
          name: git-zap-reports
        ports:
        - containerPort: 80
        securityContext:
          privileged: true

      imagePullSecrets:
        - name: acr-registry  
              
      volumes:
      - name: docker-sock-volume
        hostPath:
          # location on host
          path: /var/run/docker.sock
          # this field is optional
          type: File       
      - name: git-zap-reports
        hostPath:
          # location on host
          path: /zap/wrk
