aws-eks/k8s-yml-templates/core/linkerd.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: linkerd
spec:
    rules:
    - host: linkerd-web.linkerd.svc.cluster.local
      http:
        paths:
        - backend:
            serviceName: linkerd-web
            servicePort: 8084
---
