aws-eks/k8s-yml-templates/core/sonarIng.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube
  namespace: devsecops
spec:
    tls:
      - hosts:
        #- sonarqube.cloudkube.xyz
        - metsonar.metricon.com.au
        secretName: ingress-secret-tls 
    rules:
    - host: metsonar.metricon.com.au
      http:
        paths:
        - backend:
            serviceName: sonarqube-sonarqube
            servicePort: 9000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube-http
  namespace: devsecops
  #annotations: 
  #  kubernetes.io/ingress.class: "ingress-sonarqube"
spec:
    rules:
    - host: git-metsonar.metricon.com.au
      http:
        paths:
        - backend:
            serviceName: sonarqube-sonarqube
            servicePort: 9000
---
#https://www.emtec.digital/think-hub/blogs/sonarqube-integration-azure-active-directory/
#AAD redirect url for SPN https://dev-sonarqube.cloudkube.xyz/oauth2/callback/aad
